[package]
name = "file-system-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
actix-rt = "2.10.0"
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.0"
actix-files = "0.6"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
gstreamer = "0.23.0"
gstreamer-app = "0.23.0"
